--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
     </div>
   </div>
 </nav>
+<h1>Welcome to our site!</h1>
 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-interval="3000">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
