--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
           font-size: 16px;
           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+        .card{
+          margin-bottom: 140px;
+        }
     </style>
 </head>
   <body>
@@ -397,14 +400,13 @@
         <p class="card-text">Remote Controlled Toy Car | 1:16 Scale.</p>
         <a href="https://toykoo.in/collections/rc-toys" class="btn btn-primary">Rs. 1,599.00</a>
       </div>
-    </div><br><br><br><br><br><br><br><br><br>
+    </div>
     <footer>
       <div class="footer-container">
       <div class="footer-section">
         <h3>ToyCars™</h3>
         <p>Bringing joy on wheels! Shop the best toy cars for kids and collectors.</p>
       </div>
-
       <div class="footer-section">
         <h3>Quick Links</h3>
         <ul>
@@ -441,9 +443,6 @@
     <script>
         document.getElementById("currentYear").textContent = new Date().getFullYear();
     </script>
-    <div class="footer-bottom">
-      <p>&copy; 2024 ToyCars™. All rights reserved.</p>
-    </div>
   </footer>
 <script src="script.js"></script>  
 </body>
